# Rusty-Wallpapers

./: Cargo.toml  README.md
src/: main.rs
src/models/: mod.rs
src/utilities/: mod.rs
