[package]
name = "wpapercli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wpapercli"
path = "src/main.rs"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.12"
serde_json = "1.0.87"
serde = { version = "1.0.147", features = ["derive"] }
tokio = { version = "1.21.2", features = ["full"] }
